fixed rotation on mobile, speed text, and color picker styling

--- a/src/components/ColorPicker/ColorPicker.css
+++ b/src/components/ColorPicker/ColorPicker.css
@@ -81,7 +81,7 @@
     background-color: black;
     border-radius: 50%;
     position: absolute;
-    margin-top: -40px;
+    margin-top: -8.5%;
     margin-left: 35px;
 }
 
